[package]
name = "moonshine-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
env_logger = "0.11.8"
deadpool = { version = "0.12.2", features = ["rt_tokio_1"] }
moonshine-processor = { path = "../processor" }
chrono = { version = "0.4.41", features = ["serde"] }