[package]
name = "moonshine-processor"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
tokio = { version = "1.47.1", features = ["full"] }
env_logger = "0.11.8"
reqwest = { version = "0.12.23", features = ["json"] }
async-channel = "2.5.0"
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
bincode = "2.0.1"
async-trait = "0.1.89"
deadpool = "0.12.2"